--- a/gistguild-node/src/main/resources/templates/statistics.html
+++ b/gistguild-node/src/main/resources/templates/statistics.html
@@ -17,36 +17,28 @@
 </head>
 <body class="d-flex h-100 text-center text-bg-dark">
 
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <header class="mb-auto">
+<div class="d-flex w-100 p-3 mx-auto flex-column">
+    <header>
         <div>
-            <img th:src="@{/images/logo.jpg}" alt="GIST Logo" style="width: 50px">
+            <img th:src="@{/images/logo.jpg}" alt="GIST Logo" style="width: 50px; position: absolute;left: 15px;" class="logo">
             <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
+                <a class="nav-link fw-bold py-1 px-0" href="/">Home</a>
                 <a class="nav-link fw-bold py-1 px-0" href="/product">Catalog</a>
                 <a class="nav-link fw-bold py-1 px-0" href="/participant">Participants</a>
                 <a class="nav-link fw-bold py-1 px-0" href="/orderInProgress">Orders</a>
-                <a class="nav-link fw-bold py-1 px-0" href="/statistics">Statistics</a>
+                <a class="nav-link fw-bold py-1 px-0 active" aria-current="page"  href="/statistics">Statistics</a>
                 <a class="nav-link fw-bold py-1 px-0" href="/logout">Logout</a>
             </nav>
         </div>
     </header>
 
-    <main class="px-3">
-        <h1>GIST Guild.</h1>
-        <p class="lead">A Telegram BOT Order Management System based on a <b>data distriduted federated universe</b></p>
-         <p class="lead">
-            <a href="https://github.com/gvincenzi/gistguild" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
-        </p>
+    <main class="w-100">
+
+        <hr/>
+        <h2>Statistics board</h2>
+        <hr/>
+
     </main>
-
-    <footer class="mt-auto text-white-50">
-        <p class="less" th:if="${validation} != null" th:style="${validation} ? 'color: green' : 'color: red'">The registry for the instance <i><td th:text="${instanceName}"/></i> is <td th:text="${validation} ? 'valid' : 'not valid'" /></p>
-        <p>GIST Guild is a open source poject on <a href="https://getbootstrap.com/" class="text-white">GitHub</a>, developed by <a
-                href="https://www.linkedin.com/in/giuseppevincenzi/?originalSubdomain=fr" class="text-white">Giuseppe Vincenzi</a>.</p>
-    </footer>
-</div>
-
 
 </body>
 </html>
