--- a/gistguild-node/src/main/resources/templates/welcome.html
+++ b/gistguild-node/src/main/resources/templates/welcome.html
@@ -33,8 +33,8 @@
     </header>
 
     <main class="px-3">
-        <h1>GIST Guild.</h1>
-        <p class="lead">A Telegram BOT Order Management System based on a <b>data distriduted federated universe</b></p>
+        <h1>[[${softwareName}]].</h1>
+        <p class="lead">A Telegram BOT Order Management System based on <b>GIST Guild, a data distributed federated universe</b></p>
          <p class="lead">
             <a href="https://github.com/gvincenzi/gistguild" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
         </p>
